--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="CSS/index.css">
 </head>
 
 <body>
@@ -169,14 +169,14 @@
                     <div class="review-content">
                         <p>I have been going here for swimming lessons for over 3 years and it helped me become a better
                             swimmer.</p>
-                        <p class="user-info">Peter, 28 y.o.</p>
+                        <p class="user-info mt-5">Peter, 28 y.o.</p>
                     </div>
                 </div>
                 <div class="review-cards w-25">
                     <div class="review-content">
                         <p>Joining this school has changed my life as I was afraid of water before but now I like it a
                             lot thanks to your les-sons.</p>
-                        <p class="user-info">Jane, 20 y.o.</p>
+                        <p class="user-info mt-5">Jane, 20 y.o.</p>
                     </div>
                 </div>
             </div>
